<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context=".details.ClienteDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtNomeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:gravity="center"
        android:text="@string/label_nome"
        android:textColor="@color/colorTexto"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtServicoPrestadoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/item_margin"
        android:gravity="center"
        android:text="@string/label_servico_prestado"
        android:textColor="@color/colorTexto"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtServicoPrestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPendenteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/item_margin"
        android:gravity="center"
        android:text="@string/label_pendente"
        android:textColor="@color/colorTexto"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtPendente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtValorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/item_margin"
        android:gravity="center"
        android:text="@string/label_valor"
        android:textColor="@color/colorTexto"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtValorServico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtObservacoesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/item_margin"
        android:gravity="center"
        android:text="@string/label_observacoes"
        android:textColor="@color/colorTexto"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtObservacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>